fixed offcenter on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ a:focus {
 
 .header a {
 	outline: none;
+	display: block;
 	color: #fff;
 	text-decoration: none;
 	opacity: 0.7;
@@ -39,6 +40,7 @@ a:focus {
 	font-weight: 300;
 	font-size: 2.625em;
 	line-height: 1.3;
+
 }
 
 .header h1 span {
@@ -48,7 +50,7 @@ a:focus {
 }
 
 .container {
-	padding: 80px;
+	padding-top: 80px;
 }
 
 
